--- a/manifest.yml
+++ b/manifest.yml
@@ -1,15 +1,15 @@
 ---
 declared-services:
-  my-conversation-service:
+  conversation-tutorial:
     label: conversation
     plan: free
 applications:
-- name: conversation-simple
+- name: conversation-tutorial
   command: npm start
   path: .
   memory: 512M
   instances: 1
   services:
-  - my-conversation-service
+  - conversation-tutorial
   env:
     NPM_CONFIG_PRODUCTION: false
