--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # Environment variables
-WORKSPACE_ID=<workspace-id>
-CONVERSATION_USERNAME=<conversation-username>
-CONVERSATION_PASSWORD=<conversation-password>
+WORKSPACE_ID=8197e051-0fc1-4d5a-a06b-1ac433b58f39
+CONVERSATION_USERNAME=8aac631f-998a-439d-867d-cf57b454d634
+CONVERSATION_PASSWORD=msBQ3uPqUCcC
