--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
+USE_WEBUI=true
+
 # Environment variables
-WORKSPACE_ID=8197e051-0fc1-4d5a-a06b-1ac433b58f39
+# CONVERSATION
+CONVERSATION_URL=https://gateway.watsonplatform.net/conversation/api
 CONVERSATION_USERNAME=8aac631f-998a-439d-867d-cf57b454d634
 CONVERSATION_PASSWORD=msBQ3uPqUCcC
+WORKSPACE_ID=8197e051-0fc1-4d5a-a06b-1ac433b58f39
