--- a/manifest.yml
+++ b/manifest.yml
@@ -7,8 +7,8 @@ applications:
    - conversation-tutorial-service
   instances: 1
   domain: mybluemix.net
-  name: my-conversation-tutorial
-  host: my-conversation-tutorial
+  name: cox-va
+  host: cox-va
   command: npm start
   path: .
   memory: 512M
